[package]
name = "clientv1"
version = "0.1.0"
authors = ["tacogips <me@tacogips.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.2.25", features=["full"]}
serde = "1.0.125"
anyhow = "1.0.40"

[dependencies.mongodb]
version = "1.2.1"
