[package]
name = "optimistic_lock"
version = "0.1.0"
authors = ["tacogips <me@tacogips.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.5.0"
serde = "1.0.125"
anyhow = "1.0.40"
futures = "0.3.17"

[dependencies.mongodb]
version = "2"
